--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
               const respuestaSeleccionada = selectElement.value;
               alert(respuestaSeleccionada === respuestaCorrecta ? '¡Respuesta correcta!' : 'Respuesta incorrecta. La respuesta correcta es: ' + respuestaCorrecta);
             }
-            <\/script>
+            </script>
             `;
             const estructuraHTML = `
             <html>
@@ -142,9 +142,7 @@
             <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
             </head>
             <body>
-            <div>
             ${preguntas}
-            </div>
             ${script}
             </body>
             </html>
