--- a/index.html
+++ b/index.html
@@ -37,9 +37,10 @@
     <div>
         <h1>DIDquiz</h1>
         <h2>descarga una copia del html del generador de quiz: DIDquiz</h2>
-        <h2>¿que es un HTML?</h2>
-        <h3>Un HTML es un formato de archivo para páginas web como esta que se ejecuta en el navegador, no necesitas ninguna app especial para abrirlo</h3>
         <button onclick="descargar()">Preparar descarga y descargar</button>
+        <details><summary>Advertencia</summary><li>este servicio tiene la capacidad de descargar otros archivos, ordena tu ordenador</li></details>
+        <details><summary>que es un HTML</summary><li>Un HTML es un formato de archivo para páginas web como esta que se ejecuta en el navegador, no necesitas ninguna app especial para abrirlo</li>
+        <li>todos los archivos que se descarguen en este servicio van a ser .HTML</li></details>
         <script>
             function descargar(){
                 const link = document.createElement('a');
@@ -53,3 +54,4 @@
     </div>
 </body>
 </html>
+
