--- a/index.html
+++ b/index.html
@@ -39,8 +39,9 @@
         <h2>descarga una copia del html del generador de quiz: DIDquiz</h2>
         <button onclick="descargar()">Preparar descarga y descargar</button>
         <details><summary>Advertencia</summary><li>este servicio tiene la capacidad de descargar otros archivos, ordena tu ordenador</li></details>
-        <details><summary>que es un HTML</summary><li>Un HTML es un formato de archivo para páginas web como esta que se ejecuta en el navegador, no necesitas ninguna app especial para abrirlo</li>
+        <details><summary>¿qué es un HTML?</summary><li>Un HTML es un formato de archivo para páginas web como esta que se ejecuta en el navegador, no necesitas ninguna app especial para abrirlo</li>
         <li>todos los archivos que se descarguen en este servicio van a ser .HTML</li></details>
+        <br>
         <script>
             function descargar(){
                 const link = document.createElement('a');
@@ -54,4 +55,5 @@
     </div>
 </body>
 </html>
+
 
