Fix HTML formatting and improve structure

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <body>
     <div>
         <h1>DIDquiz</h1>
-        <h2>Descarga una copia del html del generador de quiz: DIDquiz</h2>
+        <h2>Descarga una copia del HTML del generador de quiz: DIDquiz</h2>
         <button onclick="descargar()">Preparar descarga y descargar</button>
         <details><summary>Advertencia</summary><li>este servicio tiene la capacidad de descargar otros archivos, ordena tu ordenador</li></details>
         <details><summary>¿Qué es un HTML?</summary><li>Un HTML es un formato de archivo para páginas web como esta que se ejecuta en el navegador, no necesitas ninguna app especial para abrirlo</li>
@@ -55,6 +55,7 @@
     </div>
 </body>
 </html>
+
 
 
 
