--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <script>
             function descargar(){
                 const link = document.createElement('a');
-                link.href = "creador_quiz.html"
+                link.href = "DID quiz.html"
                 link.download = "DIDquiz.html";
                 document.body.appendChild(link);
                 link.click();
@@ -55,6 +55,7 @@
     </div>
 </body>
 </html>
+
 
 
 
