--- a/index.html
+++ b/index.html
@@ -37,15 +37,23 @@
     <div>
         <h1>DIDquiz</h1>
         <h2>Descarga una copia del HTML del generador de quiz: DIDquiz</h2>
-        <button onclick="descargar()">Preparar descarga y descargar</button>
+        <button onclick="descargares()">Preparar y descargar (Español)</button><button onclick="descargaren()">Prepare and download (English)</button>
         <details><summary>Advertencia</summary><li>este servicio tiene la capacidad de descargar otros archivos, ordena tu ordenador</li></details>
         <details><summary>¿Qué es un HTML?</summary><li>Un HTML es un formato de archivo para páginas web como esta que se ejecuta en el navegador, no necesitas ninguna app especial para abrirlo</li>
         <li>todos los archivos que se descarguen en este servicio van a ser .HTML</li></details>
         <br>
         <script>
-            function descargar(){
+            function descargares(){
                 const link = document.createElement('a');
-                link.href = "DID quiz.html"
+                link.href = "DIDquiz_es.html"
+                link.download = "DIDquiz.html";
+                document.body.appendChild(link);
+                link.click();
+                document.body.removeChild(link);
+            }
+            function descargaren(){
+                const link = document.createElement('a');
+                link.href = "DIDquiz_en.html"
                 link.download = "DIDquiz.html";
                 document.body.appendChild(link);
                 link.click();
@@ -55,6 +63,7 @@
     </div>
 </body>
 </html>
+
 
 
 
