--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         </select>
 
         <div>
-            <button id="downloadBtn">Descargar</button>
+            <button id="downloadBtn">Download</button>
         </div>
 
         <details>
@@ -118,3 +118,4 @@
     </script>
 </body>
 </html>
+
