--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
     <style>
         body{
-            font-family: "Open Sans", system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+            font-family: "Open Sans";
             margin: 5px;
             display: flex;
             align-items: center;
@@ -18,24 +18,16 @@
             min-height: 100vh;
             box-sizing: border-box;
         }
-        .card {
-            padding: 20px;
-            border-radius: 20px;
-            background-color: white;
-            box-shadow: 7px 7px 15px #101010;
-            max-width: 720px;
-            width: 100%;
-        }
-        button, input, select{
+        button, a, input, select{
             border: 3px solid #f0f;
             background-color: white;
             padding: 10px;
             margin: 6px 2px;
             border-radius: 20px;
-            cursor: pointer;
-            font-size: 1rem;
+            text-decoration: none;
+            color: black;
         }
-        button:hover, input:hover, select:hover{
+        button:hover, input:hover, select:hover, a:hover{
             background-color: #f0f;
             color: white;
         }
@@ -54,17 +46,11 @@
     <div class="card" role="main">
         <h1>DIDquiz</h1>
         <h2>Descarga una copia del HTML o PDF del generador de quiz</h2>
-
-        <label for="archivo">file:</label>
-        <select id="archivo" name="archivo" aria-label="Seleccionar archivo a descargar">
-            <option value="Quizen">Quiz generator (EN)</option>
-            <option value="Guideen">Guide of service (EN)</option>
-            <option value="Quizes">Generador de quiz (ES)</option>
-            <option value="Guiaes">Guía de servicio (ES)</option>
-        </select>
-
         <div>
-            <button id="downloadBtn">Download</button>
+            <a download="Guide.pdf" href="Guía de uso de DID quiz en.pdf">Users guide (en)</a>
+            <a download="Guia.pdf" href="Guía de uso de DID en.pdf">Guía del usuario (es)</a>
+            <a download="DIDquiz.html" href="DIDquiz_en.html">Service (en)</a>
+            <a download="DIDquiz.html" href="DIDquiz_es.html">Servicio (es)</a>
         </div>
 
         <details>
@@ -118,4 +104,5 @@
     </script>
 </body>
 </html>
+
 
