Enhance card appearance with box shadow
Added a div with a box shadow to enhance the card appearance.

--- a/index.html
+++ b/index.html
@@ -31,13 +31,10 @@
             background-color: #f0f;
             color: white;
         }
-        details > summary {
-            cursor: help;
-            font-weight: 600;
-            margin-top: 8px;
-        }
-        ul {
-            margin: 6px 0 10px 1.2em;
+        div {
+            border-radius: 20px;
+            background-color: white;
+            box-shadow: 7px 7px 15px #101010;
         }
     </style>
 <title>Descargar servicio - DIDquiz</title>
@@ -70,6 +67,7 @@
     </div>
 </body>
 </html>
+
 
 
 
