Enhance styling with padding in main div
Added padding to the main div for better spacing.

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
             border-radius: 20px;
             background-color: white;
             box-shadow: 7px 7px 15px #101010;
+            padding: 5px;
         }
     </style>
 <title>Descargar servicio - DIDquiz</title>
@@ -43,12 +44,10 @@
     <div class="card" role="main">
         <h1>DIDquiz</h1>
         <h2>Descarga una copia del HTML o PDF del generador de quiz</h2>
-        <div>
             <a download="Guide.pdf" href="Guía de uso de DID quiz en.pdf">Users guide (en)</a>
             <a download="Guia.pdf" href="Guía de uso de DID en.pdf">Guía del usuario (es)</a>
             <a download="DIDquiz.html" href="DIDquiz_en.html">Service (en)</a>
             <a download="DIDquiz.html" href="DIDquiz_es.html">Servicio (es)</a>
-        </div>
 
         <details>
             <summary>Advertencia</summary>
@@ -67,6 +66,7 @@
     </div>
 </body>
 </html>
+
 
 
 
