Refactor index.html for cleaner structure
Removed unnecessary whitespace and adjusted margin for buttons.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             border: 3px solid #f0f;
             background-color: white;
             padding: 10px;
-            margin: 6px 2px;
+            margin: 6px 6px;
             border-radius: 20px;
             text-decoration: none;
             color: black;
@@ -35,20 +35,18 @@
             border-radius: 20px;
             background-color: white;
             box-shadow: 7px 7px 15px #101010;
-            padding: 5px;
         }
     </style>
 <title>Descargar servicio - DIDquiz</title>
 </head>
 <body>
-    <div class="card" role="main">
+    <div>
         <h1>DIDquiz</h1>
         <h2>Descarga una copia del HTML o PDF del generador de quiz</h2>
             <a download="Guide.pdf" href="Guía de uso de DID quiz en.pdf">Users guide (en)</a>
             <a download="Guia.pdf" href="Guía de uso de DID en.pdf">Guía del usuario (es)</a>
             <a download="DIDquiz.html" href="DIDquiz_en.html">Service (en)</a>
-            <a download="DIDquiz.html" href="DIDquiz_es.html">Servicio (es)</a>
-
+            <a download="DIDquiz.html" href="DIDquiz_es.html">Servicio (es)</a><br>
         <details>
             <summary>Advertencia</summary>
             <ul>
@@ -66,6 +64,7 @@
     </div>
 </body>
 </html>
+
 
 
 
