Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -46,14 +46,13 @@
             <a download="Guide.pdf" href="Guía de uso de DID quiz en.pdf">Users guide (en)</a>
             <a download="Guia.pdf" href="Guía de uso de DID en.pdf">Guía del usuario (es)</a>
             <a download="DIDquiz.html" href="DIDquiz_en.html">Service (en)</a>
-            <a download="DIDquiz.html" href="DIDquiz_es.html">Servicio (es)</a><br>
+            <a download="DIDquiz.html" href="DIDquiz_es.html">Servicio (es)</a><br><br><br>
         <details>
             <summary>Advertencia</summary>
             <ul>
                 <li>Este servicio tiene la capacidad de descargar otros archivos; organiza tu ordenador antes de usarlo.</li>
             </ul>
         </details>
-
         <details>
             <summary>¿Qué es un HTML?</summary>
             <ul>
@@ -64,3 +63,4 @@
     </div>
 </body>
 </html>
+
