Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <h1>DIDquiz</h1>
         <h2>Descarga una copia del HTML o PDF del generador de quiz</h2>
             <a download="Guide.pdf" href="Guía de uso de DID quiz en.pdf">Users guide (en)</a>
-            <a download="Guia.pdf" href="Guía de uso de DID es.pdf">Guía del usuario (es)</a>
+            <a download="Guia.pdf" href="Guía de uso de DID quiz es.pdf">Guía del usuario (es)</a>
             <a download="DIDquiz.html" href="DIDquiz_en.html">Service (en)</a>
             <a download="DIDquiz.html" href="DIDquiz_es.html">Servicio (es)</a><br><br>
         <details>
@@ -63,5 +63,6 @@
     </div>
 </body>
 </html>
+
 
 
