--- a/DIDquiz_es.html
+++ b/DIDquiz_es.html
@@ -153,7 +153,7 @@
               const respuestaSeleccionada = selectElement.value;
               alert(respuestaSeleccionada === respuestaCorrecta ? '¡Respuesta correcta!' : 'Respuesta incorrecta. La respuesta correcta es: ' + respuestaCorrecta);
             }
-            <\/script>
+            </scr` + `ipt>
             `;
             const estructuraHTML = `
             <html>
@@ -183,6 +183,5 @@
             URL.revokeObjectURL(url);
         }
     </script>
-
 </body>
 </html>
