Enhance mobile responsiveness in DIDquiz_es.html
Added responsive styles for mobile view.

--- a/DIDquiz_es.html
+++ b/DIDquiz_es.html
@@ -35,6 +35,45 @@
             border: 1px solid #909090;
             padding: 1px 1px;
         }
+        @media (max-width: 600px) {
+        body {
+            font-size: 1.1em;
+            line-height: 1.6;
+            padding: 10px;
+        }
+        div {
+            width: 100%;
+            margin: 10px 0;
+            padding: 10px;
+            box-sizing: border-box;
+        }
+        input,textarea{
+            width: 100%;
+            max-width: 100%;
+            font-size: 1em;
+            padding: 12px;
+            margin-top: 8px;
+            margin-bottom: 8px;
+            box-sizing: border-box;
+            border-radius: 20px;
+            overflow: hidden;
+        }
+        #mensaje {
+            font-size: 0.9em;
+            padding: 10px;
+        }
+        button {
+            min-height: 48px;
+            margin-top: 15px;
+        }
+        textarea {
+            min-height: 150px;
+            resize: none;
+        }
+        .menu{
+            border: 2px solid #f0f;
+        }
+    }
     </style>
 <title>DID quiz</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
