--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         body{
             font-family: "Open Sans";
@@ -183,6 +184,83 @@
                     background-color: white;
                     box-shadow: 7px 7px 15px #101010;
                 }
+                @media (max-width: 600px) {
+
+        body {
+
+            font-size: 1.1em;
+
+            line-height: 1.6;
+
+            padding: 10px;
+
+        }
+
+        div {
+
+            width: 100%;
+
+            margin: 10px 0;
+
+            padding: 10px;
+
+            box-sizing: border-box;
+
+        }
+
+        input,textarea{
+
+            width: 100%;
+
+            max-width: 100%;
+
+            font-size: 1em;
+
+            padding: 12px;
+
+            margin-top: 8px;
+
+            margin-bottom: 8px;
+
+            box-sizing: border-box;
+
+            border-radius: 20px;
+
+            overflow: hidden;
+
+        }
+
+        #mensaje {
+
+            font-size: 0.9em;
+
+            padding: 10px;
+
+        }
+
+        button {
+
+            min-height: 48px;
+
+            margin-top: 15px;
+
+        }
+
+        textarea {
+
+            min-height: 150px;
+
+            resize: none;
+
+        }
+
+        .menu{
+
+            border: 2px solid #f0f;
+
+        }
+
+    }
             </style>`
             const script = `
             <script>
